--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitcoin Flasher DApp - Seamless Crypto Transactions</title>
+    <title>Bitcoin Flasher  - Seamless Crypto Transactions</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="Experience secure and seamless BTC/USDT transactions with Bitcoin Flasher DApp. Advanced blockchain technology for efficient crypto transfers.">
@@ -230,7 +230,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bitcoin Flasher DApp</h1>
+        <h1>Bitcoin Flasher</h1>
         <button id="connectWallet">Connect Wallet <span class="loading hidden"></span></button>
         <p id="walletStatus">Not connected</p>
 
