--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     <div id="notification" class="notification"></div>
 
     <footer>
-        &copy; 2024 Bitcoin Flasher - All rights reserved. | <a href="https://t.me/ScriptersShop/" target="_blank" rel="noopener noreferrer">Join ScriptersShop</a>
+        &copy; 2024 Bitcoin Flasher - All rights reserved. | <a href="https://t.me/ScriptersShop/" target="_blank" rel="noopener noreferrer">Scripters</a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
